# gj-vs-binary

./: .gitignore  .gitmodules  Makefile  README.md  bushy plans.md  combine-gj.md  indices in generic join.md  normalize queries.md  roadmap.md
data/: .gitignore  profile.json
data/imdb/: Makefile
gj/: 4eachdata.json  Cargo.toml  ddb.json  full.txt  good.json  imdb.json  lsqb.json  nocart.json  out.snap  out.txt  run_lsqb.sh  s2.json  s25.json  s3.json  s4.json  s5.json  time.txt
gj/src/: join.rs  lib.rs  main.rs  schema.rs  sql.rs  triangle.drawio  trie.rs  util.rs
gj_derive/: Cargo.toml
gj_derive/src/: lib.rs
kuzu-scripts/: q1.cypher  q2.cypher  q3.cypher  q4.cypher  q5.cypher  run.py
logs/: bad.json  imdb.json  kuzu.json  lsqb-slow.json  profile.json
logs/imdb-profiles/: IMDBQ001.json  IMDBQ002.json  IMDBQ005.json  IMDBQ008.json  IMDBQ012.json  IMDBQ014.json  IMDBQ015.json  IMDBQ017.json  IMDBQ018.json  IMDBQ019.json  IMDBQ020.json  IMDBQ021.json  IMDBQ022.json  IMDBQ023.json  IMDBQ028.json  IMDBQ030.json  IMDBQ034.json  IMDBQ035.json  IMDBQ039.json  IMDBQ044.json  IMDBQ046.json  IMDBQ048.json  IMDBQ049.json  IMDBQ050.json  IMDBQ051.json  IMDBQ052.json  IMDBQ054.json  (+38 more)
preprocessor/: .gitignore  generate_test.sh  generate_tests.sh  normalize.sh  preprocess.sh  run.sh  run_tests.sh  temp.sql  test.sh
scripts/: csv2parquet.sh  gen_star.py  imdb.py  import.sql  kuzu.py  lsqb.py  plot.py  profile.sh  robust.py  sr.csv  ss.csv  st.csv  star.py  transform.sql
taco/: q13.py
tensor_preprocessor/: run.sh  test.sh
translator/: .gitignore  Cargo.toml
(+488 files in other folders)
