[package]
name = "gj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
qry = { path = "../qry" }
parquet = "18.0"
indexmap = "1.9"

gj_derive = { path = "../gj_derive" }