[package]
name = "gj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = "18.0"
indexmap = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-hash = "1.1"
smallvec = "1.9.0"
derivative = "2.2.0"
clap = { version = "3.2.20", features = ["derive"] }
once_cell="1"
log = "0.4.17"
env_logger = { version = "0.9.0", default-features = false }

[profile.release]
debug = true
